# orders-llm

./: pyproject.toml
.github/workflows/: llm_deploy.yaml
src/: data_service.py  enums.py  main.py  mock_list.py  prediction.py  rag.py  tests.py
