[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Yoni <yonyjacoby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.4.1"
functions-framework = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
