[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Yoni <yonyjacoby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
functions-framework = "^3.5.0"
langchain-google-genai = "^1.0.1"
langchain = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
